spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app
  labels:
    app: my-spring-boot-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: my-spring-boot-app
